Monitoring/grafanapromethus.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: surya.prakashsolaki.tech
    http:
      paths:
      - pathType: Prefix
        path: /prometheus
        backend:
          service:
            name: prometheus
            port: 
              number: 9090
