Monitoring/prometheusingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring 
spec:
  rules:
  - host: surya.prakashsolanki.tech
    http:
      paths:
      - pathType: Prefix
        path: /grafana
        backend:
          service:
            name: grafana
            port: 
              number: 3000
